--- a/frontend/src/app/hero-operation/hero-operation.component.html
+++ b/frontend/src/app/hero-operation/hero-operation.component.html
@@ -1,11 +1,12 @@
 <h3>create new hero</h3>
-
-<label>
-  name:
-  <input type="text" (change)="onNameChanged($event)" />
-</label>
+<img [src]="url" *ngIf="url" width="200" height=auto>
 <br/>
-
+  <label>Name:</label>
+  <input type="text" (change)="onNameChanged($event)" />
+  <br/>
+  <label>Photo:</label>
+  <input type="file" (change)="selectFile($event)">
 <br/>
 <button class="create" (click)="newHero()">create</button>
 <button (click)="goBack()">go back</button>
+
