added search functionality

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -11,4 +11,5 @@
 
     <button routerLink="/create-hero">create hero</button>
     <button (click)=deleteLeader() routerLink="/dashboard">delete leading heros</button>
+    <app-hero-search></app-hero-search>
 </div>
