fixed issue images at detail view not loading

--- a/frontend/src/app/hero-detail/hero-detail.component.html
+++ b/frontend/src/app/hero-detail/hero-detail.component.html
@@ -1,11 +1,11 @@
 <div id="div1" *ngIf="hero" >
-    <h2>{{hero.img}} Details</h2>
-    <img [src]=url width="200" height=auto>
+    <h2>{{hero.name}} Details</h2>
+    <img [src]="hero.img" width="200" height=auto>
     <div><span>id: </span>{{hero.id}}</div>
     <label for="hero-name">Hero name: </label>
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="enter name here">
     <br>
     <button (click)="save()">save</button>
-    <button (click)="delete()">delete</button>
+    <button routerLink="/dashboard" (click)="delete()" >delete</button>
     <button (click)="goBack()">go back</button>
 </div>
