added crude login functionality with one hardcoded password

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,8 @@
+<nav>
+    <a routerLink="/dashboard">Dashboard </a>
+    <a routerLink="/heroes">Heroes</a>
+</nav>
+
 <div id="div1">
     <h2>Leaderboard</h2>
     <div class="heroes menue">
@@ -13,3 +18,4 @@
     <button (click)=deleteLeader() routerLink="/dashboard">delete leading heros</button>
     <app-hero-search></app-hero-search>
 </div>
+<app-messages></app-messages>
