--- a/frontend/src/app/hero-list/hero-list.component.html
+++ b/frontend/src/app/hero-list/hero-list.component.html
@@ -1,3 +1,8 @@
+<nav>
+    <a routerLink="/dashboard">Dashboard </a>
+    <a routerLink="/heroes">Heroes</a>
+</nav>
+
 <div id="div1">
 <h2>All Heroes</h2>
 <ol class = "heroes">
@@ -8,3 +13,4 @@
     </li>
 </ol>
 </div>
+<app-messages></app-messages>
