--- a/frontend/src/app/hero-detail/hero-detail.component.html
+++ b/frontend/src/app/hero-detail/hero-detail.component.html
@@ -1,3 +1,8 @@
+<nav>
+    <a routerLink="/dashboard">Dashboard </a>
+    <a routerLink="/heroes">Heroes</a>
+</nav>
+
 <div id="div1" *ngIf="hero" >
     <h2>{{hero.name}} Details</h2>
     <img [src]="hero.img" width="200" height=auto>
@@ -9,3 +14,5 @@
     <button routerLink="/dashboard" (click)="delete()" >delete</button>
     <button (click)="goBack()">go back</button>
 </div>
+
+<app-messages></app-messages>
