Revert "styled login"
This reverts commit a633b15c

--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -1,115 +1,7 @@
-/* .main {
-  height: 50%;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 5%;
-  padding: 60px 60px;
-  background: url(/assets/images/heroes_in_action.jpg) center center #505050;   
-  background-size: cover;
-  box-shadow: 0px 30px 60px -5px #000;
-  font: normal 90% "Lucida Console" ;
-
-}
-
-.formgroup{
-  height: 50%;
-  width: 50%;
-}
-form {
-  padding-top: 30px;
-}
-
-h2 {
-  margin-left: 10%;
-  font-size: 22px;
-  text-transform: uppercase;
-  padding-bottom: 5px;
-  letter-spacing: 2px;
-  display: inline-block;
-  font-weight: 100;
-  color:gold;
-}
-
-h2:first-child {
-  padding-left: 0px;
-}
-
-span {
-  text-transform: uppercase;
-  font-size: 12px;
-  opacity: 0.4; 
-  display: inline-block;
-  position: relative;
-  top: -65px;
-  transition: all 0.5s ease-in-out;
-}
-
-input {
-  width: 30%;
-  height: 15px;
-  padding: 10px 20px;
-  display: block;
-  border-radius: 20px;
-  background: rgba(0, 0, 0, 0.6);
-  border: 0px;
-  color: white;
-  overflow: hidden;
-  transition: all 0.5s ease-in-out;
-}
-
-input:focus {
-  outline: 0;
-  border: 0px;
-  border-radius: 20px;
-  background: rgba(0, 0, 0, 5);
-  color: white;
-  box-shadow: 0em 0em 2em  gold;
-
-}
-
-label {
-  display: inline-block;
-  padding: .2em .5em 0em .5em ;
-  margin-top: 15px;
-  margin-left: 20px;
-  color: gold;
-  border-radius: 10px 10px 0px 0px;
-  background: rgba(0, 0, 0, 0.6);
+.ng-valid[required], .ng-valid.required  {
+    border-left: 5px solid #42A948; /* green */
+  }
   
-}
-
-button {
-  background: rgba(0, 0, 0, 1);
-  color: gold;
-  width: 37%;
-  padding: 10px 20px;
-  display: block;
-  height: 39px;
-  border-radius: 20px;
-  margin-top: 10px;
-  transition: all 0.5s ease-in-out;
-  border: none;
-  text-transform: uppercase;
-  font: normal 100% "Lucida Console" ;
-
-}
-
-button:hover {
-  box-shadow: 0em 0em 2em  gold;
-  cursor: pointer;
-}
-
-.button:focus {
-  outline: none;
-}
-
-
-a {
-  text-align: center;
-  display: block;
-  top: 120px;
-  position: relative;
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.2);
-} */
+  .ng-invalid:not(form)  {
+    border-left: 5px solid #a94442; /* red */
+  }
