centralized application styling, only component specific stlying in component

--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -1,15 +1,12 @@
-/* DashboardComponent's private CSS styles */
 
 h2 {
   text-align: center;
 }
 
-.heroes-menu {
+.dashboard {
   padding: 0;
   margin: auto;
   max-width: 1000px;
-
-  /* flexbox */
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -18,7 +15,7 @@ h2 {
   align-items: flex-start;
 }
 
-li {
+.dashboard li {
   background-color: #3f525c;
   border-radius: 2px;
   padding: 1rem;
@@ -32,10 +29,15 @@ li {
   margin: .5rem auto;
   box-sizing: border-box;
 
-  /* flexbox */
   order: 0;
   flex: 0 1 auto;
   align-self: auto;
+}
+
+.buttons{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 @media (min-width: 600px) {
@@ -43,15 +45,4 @@ li {
     width: 18%;
     box-sizing: content-box;
   }
-}
-
-li:hover {
-  background-color: #000;
-}
-
-#div1{
-  height: 600px;
-  border: 2px solid #cfd8dc;
-  padding: 5px;
-  overflow: auto;
 }
