--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,22 +1,162 @@
-h1 {
-    margin-bottom: 0;
-  }
-  nav a {
-    padding: 1rem;
-    text-decoration: none;
-    margin-top: 10px;
-    display: inline-block;
-    background-color: #cfd8dc;
-    color: #3d3d3d;
-  }
+.background{
+  /* height: 1%; */
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  /* margin-top: 10%; */
+  padding: 60px 60px;
+  background: url(/assets/images/headquater3.jpg) no-repeat center center #505050; 
+  background-size: cover;
+  box-shadow: 0px 30px 60px -5px #000;
+}
+.main {
+    
   
-  nav a:hover {
-    color: white;
-    background-color: #42545C;
-  }
-  nav a:current{
-    background-color: #42545C;
-  }
-  nav a.active {
-    background-color: black;
-  }
+  font: normal 90% "Lucida Console" ;
+  overflow: auto;
+  position: relative;
+}
+
+.login {
+  height: 50%;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5%;
+  padding: 60px 60px;
+  background: url(/assets/images/heroes_in_action.jpg) center center #505050;   
+  background-size: cover;
+  box-shadow: 0px 30px 60px -5px #000;
+  font: normal 90% "Lucida Console" ;
+
+}
+
+nav a{
+  padding: 1rem;
+  background-color: #cfd8dc;
+  color: #3d3d3d;
+  display: inline-block;
+
+}
+nav a:hover {
+  color: white;
+  background-color: #42545C;
+}
+nav a:current{
+  background-color: #42545C;
+}
+nav a.active {
+  background-color: black;
+}
+
+h2 {
+  /* padding-left: 20px; */
+  margin-left: 10%;
+  font-size: 22px;
+  text-transform: uppercase;
+  padding-bottom: 5px;
+  letter-spacing: 2px;
+  display: inline-block;
+  font-weight: 100;
+  color:gold;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.6);
+  padding: .5em;
+}
+
+h2:first-child {
+  padding-left: 0px;
+}
+
+span {
+  text-transform: uppercase;
+  font-size: 12px;
+  opacity: 0.4; 
+  display: inline-block;
+  position: relative;
+  top: -65px;
+  transition: all 0.5s ease-in-out;
+}
+
+input {
+  width: 30%;
+  height: 15px;
+  padding: 10px 20px;
+  display: block;
+  border-radius: 20px;
+  background: rgba(0, 0, 0, 0.6);
+  border: 0px;
+  color: white;
+  overflow: hidden;
+  transition: all 0.5s ease-in-out;
+}
+
+input:focus {
+  outline: 0;
+  border: 0px;
+  border-radius: 20px;
+  background: rgba(0, 0, 0, 5);
+  color: white;
+  box-shadow: 0em 0em 2em  gold;
+
+}
+
+label {
+  display: inline-block;
+  padding: .2em .5em 0em .5em ;
+  margin-top: 15px;
+  margin-left: 20px;
+  color: gold;
+  border-radius: 10px 10px 0px 0px;
+  background: rgba(0, 0, 0, 0.6);
+  
+}
+
+button {
+  background: rgba(0, 0, 0, 1);
+  color: gold;
+  width: 37%;
+  padding: 10px 20px;
+  display: block;
+  height: 39px;
+  border-radius: 20px;
+  margin-top: 10px;
+  transition: all 0.5s ease-in-out;
+  border: none;
+  text-transform: uppercase;
+  font: normal 100% "Lucida Console" ;
+
+}
+
+button:hover {
+  box-shadow: 0em 0em 2em  gold;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: none;
+}
+
+li {
+  cursor: pointer;
+  position: relative;
+  left: 0;
+  margin: .5em;
+  padding: .3em 0;
+  height: 1.6em;
+  border-radius: 20px;
+  background: rgba(0, 0, 0, 0.6);
+  border: 0px;
+  color: white;
+  overflow: hidden;
+  transition: all 0.5s ease-in-out;
+}
+li:hover {
+  outline: 0;
+  border: 0px;
+  border-radius: 20px;
+  background: rgba(0, 0, 0, 5);
+  color: white;
+  box-shadow: 0em 0em 2em  gold;
+  left: .1em;
+}
