related to nav component

--- a/frontend/src/app/hero-detail/hero-detail.component.html
+++ b/frontend/src/app/hero-detail/hero-detail.component.html
@@ -1,7 +1,4 @@
-<nav>
-    <a routerLink="/dashboard">Dashboard </a>
-    <a routerLink="/heroes">Heroes</a>
-</nav>
+<app-nav-bar></app-nav-bar>
 
 <div id="div1" *ngIf="hero" >
     <h2>{{hero.name}} Details</h2>
