--- a/frontend/src/app/hero-list/hero-list.component.html
+++ b/frontend/src/app/hero-list/hero-list.component.html
@@ -1,7 +1,4 @@
-<nav>
-    <a routerLink="/dashboard">Dashboard </a>
-    <a routerLink="/heroes">Heroes</a>
-</nav>
+<app-nav-bar></app-nav-bar>
 
 <div id="div1">
 <h2>All Heroes</h2>
