--- a/frontend/src/app/hero-operation/hero-operation.component.html
+++ b/frontend/src/app/hero-operation/hero-operation.component.html
@@ -1,16 +1,3 @@
-<nav>
-    <a routerLink="/dashboard">Dashboard </a>
-    <a routerLink="/heroes">Heroes</a>
-</nav>
-<h3>create new hero</h3>
-<img [src]="url" *ngIf="url" width="200" height=auto>
-<br/>
-<label>Name:</label>
-<input type="text" (change)="onNameChanged($event)" />
-<br/>
-<label>Photo:</label>
-<input type="file" (change)="selectFile($event)">
-<br/>
-<button class="create" (click)="newHero()" routerLink="/dashboard">create</button>
-<button (click)="goBack()">go back</button>
-<app-messages></app-messages>
+<app-nav-bar></app-nav-bar>
+
+
