--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,5 @@
-<nav>
-    <a routerLink="/dashboard">Dashboard </a>
-    <a routerLink="/heroes">Heroes</a>
-</nav>
-
-<div id="div1">
+<app-nav-bar></app-nav-bar>
+<div class="background">
     <h2>Leaderboard</h2>
     <div class="heroes menue">
         <ul>
