removed message box

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -14,4 +14,4 @@
     <button (click)=deleteLeader() routerLink="/dashboard">delete leading heros</button>
     <app-hero-search></app-hero-search>
 </div>
-<app-messages></app-messages>
+<!-- <app-messages></app-messages> -->
