--- a/frontend/src/app/hero-detail/hero-detail.component.html
+++ b/frontend/src/app/hero-detail/hero-detail.component.html
@@ -1,10 +1,10 @@
 <app-nav-bar></app-nav-bar>
 
-<div id="div1" *ngIf="hero" >
+<div class="background" *ngIf="hero" >
     <h2>{{hero.name}} Details</h2>
     <img [src]="hero.img" width="200" height=auto>
     <div><span>id: </span>{{hero.id}}</div>
-    <label for="hero-name">Hero name: </label>
+    <label for="hero-name">HeroModel name: </label>
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="enter name here">
     <br>
     <button (click)="save()">save</button>
