--- a/frontend/src/app/hero-list/hero-list.component.html
+++ b/frontend/src/app/hero-list/hero-list.component.html
@@ -1,13 +1,14 @@
 <app-nav-bar></app-nav-bar>
 
-<div id="div1">
-<h2>All Heroes</h2>
-<ol class = "heroes">
-    <li *ngFor="let hero of heroes" routerLink="/detail/{{hero.id}}">
-        
-        <span class="badge"> {{hero.id}}  | </span>{{hero.name}}
-    
-    </li>
-</ol>
+
+<div class="background">
+  <h2>All Heroes</h2>
+  <ol class = "heroes">
+      <li *ngFor="let hero of heroes" routerLink="/detail/{{hero.id}}">
+
+          <span class="badge"> {{hero.id}}  | </span>{{hero.name}}
+
+      </li>
+  </ol>
 </div>
 <!-- <app-messages></app-messages> -->
