--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,31 +1,50 @@
-<div class="container">
-    <div [hidden]="submitted">
-      <h1>Hero Login Form</h1>
-      <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
-        <div class="form-group">
-          <label for="name" >Username</label>
-          <input type="text" class="form-control" id="Username"
-                 required
-                 [(ngModel)]="username" name="Username"
-                 #Username="ngModel">
-          <div [hidden]="Username.valid || Username.pristine"
-            class="alert alert-danger">
-            Username is required
+<div class="login">
+  <div [hidden]="submitted">
+    <h2>Hero Login</h2>
+    <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
+      <div class="form-group">
+        <label for="name" >Username</label>
+        <br>
+        <input type="text" id="Username" 
+               required
+               [(ngModel)]="username" name="Username"
+               #Username="ngModel">
+        <div [hidden]="Username.valid || Username.pristine"
+          class="alert alert-danger">
+          Username is required
+        </div>
+      </div>
+      
+      <div class="form-group">
+        <label>Email</label>
+        <br>
+        <input type="text" id="Email"
+             [(ngModel)]="email" name="Email"
+             #Email="ngModel">
+        <div [hidden]="Email.valid || Email.pristine"
+             class="alert alert-danger">
+             Email is required
           </div>
-        </div>
 
-        <div class="form-group">
+      </div>
+      <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" id="Password"
+            <br>
+            <input type="password"  id="Password"
                 required
-                 [(ngModel)]="password" name="Password"
-                 #Password="ngModel">
+                [(ngModel)]="password" name="Password"
+                #Password="ngModel">
             <div [hidden]="Username.valid || Username.pristine"
-                 class="alert alert-danger">
-                 Password is required
-               </div>
-        </div>
-  
-        <button type="submit" [disabled]="!heroForm.form.valid">Submit</button>
-      </form>
-    </div>
+                class="alert alert-danger">
+                Password is required
+              </div>
+      </div>
+      <div ng-hide="authenticated">
+        <label>hallo</label>
+      </div>
+      <button type="submit" [disabled]="!heroForm.form.valid" class="signin">Login</button>
+      <button routerLink="/edit-user" [disabled]="!heroForm.form.valid">change credentials</button>
+      <button routerLink="/forgot-password">forgot password</button>
+    </form>
+  </div>
+</div>
