--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -1,37 +1,8 @@
-
-h2 {
-  text-align: center;
-}
-
-.dashboard {
-  padding: 0;
-  margin: auto;
-  max-width: 1000px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-content: flex-start;
-  align-items: flex-start;
-}
-
-.dashboard li {
-  background-color: #3f525c;
-  border-radius: 2px;
-  padding: 1rem;
-  font-size: 1.2rem;
-  text-decoration: none;
-  display: inline-block;
-  color: #fff;
-  text-align: center;
-  width: 100%;
-  min-width: 70px;
-  margin: .5rem auto;
-  box-sizing: border-box;
-
-  order: 0;
-  flex: 0 1 auto;
-  align-self: auto;
+.dashboard img {
+  width: auto;
+  height: 2em;
+  margin-left: 10%;
+  margin-top: .5em;
 }
 
 .buttons{
@@ -40,9 +11,3 @@ h2 {
   justify-content: space-around;
 }
 
-@media (min-width: 600px) {
-  a {
-    width: 18%;
-    box-sizing: content-box;
-  }
-}
