--- a/frontend/src/app/hero-operation/hero-operation.component.html
+++ b/frontend/src/app/hero-operation/hero-operation.component.html
@@ -1,3 +1,15 @@
 <app-nav-bar></app-nav-bar>
 
-
+<div class="background">
+    <h2>Create new hero</h2>
+    <img [src]="url" *ngIf="url" width="200" height=auto>
+    <br/>
+    <label>Name:</label>
+    <input type="text" (change)="onNameChanged($event)" />
+    <br/>
+    <label>Photo:</label>
+    <input type="file" (change)="selectFile($event)">
+    <br/>
+    <button class="create" (click)="newHero()">create</button>
+    <button (click)="goBack()">go back</button>
+</div>
