--- a/frontend/src/app/hero-list/hero-list.component.html
+++ b/frontend/src/app/hero-list/hero-list.component.html
@@ -1,6 +1,7 @@
 <app-nav-bar></app-nav-bar>
 <div class="background">
   <h2>All Heroes</h2>
+  <app-hero-search></app-hero-search>
   <ul class = "heroes">
       <li *ngFor="let hero of heroes" routerLink="/detail/{{hero.id}}">
           <span class="heroId">{{hero.id}}  | </span>{{hero.name}}
