--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -15,7 +15,7 @@
         </div>
       </div>
       
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label>Email</label>
         <br>
         <input type="text" id="Email"
@@ -26,7 +26,7 @@
              Email is required
           </div>
 
-      </div>
+      </div> -->
       <div class="form-group">
             <label>Password</label>
             <br>
@@ -39,12 +39,11 @@
                 Password is required
               </div>
       </div>
-      <div ng-hide="authenticated">
-        <label>hallo</label>
+      <div [hidden] = "!authfail">
+        <label>wrong credentials</label>
       </div>
-      <button type="submit" [disabled]="!heroForm.form.valid" class="signin">Login</button>
-      <button routerLink="/edit-user" [disabled]="!heroForm.form.valid">change credentials</button>
+      <button (click) = "onSubmit()" [disabled]="!heroForm.form.valid" class="signin">Login</button>
+      <!-- <button routerLink="/edit-user" [disabled]="!heroForm.form.valid">change credentials</button> -->
       <button routerLink="/forgot-password">forgot password</button>
     </form>
-  </div>
 </div>
