--- a/frontend/src/app/hero-detail/hero-detail.component.html
+++ b/frontend/src/app/hero-detail/hero-detail.component.html
@@ -3,7 +3,7 @@
 <div class="background" *ngIf="hero" >
     <h2>{{hero.name}} Details</h2>
     <img [src]="hero.img" width="200" height=auto>
-    <label for="hero-name">HeroModel name: </label>
+    <label for="hero-name" class="ontop">HeroModel name: </label>
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="enter name here">
     <br>
     <button (click)="save()">save</button>
