--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,6 @@
 <div class="navigation">
     <nav>
+        <label>Hero headquaters</label>
         <a routerLink="/dashboard">Dashboard </a>
         <a routerLink="/heroes">Heroes</a>
     </nav>
