--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -3,5 +3,6 @@
         <label>Hero headquaters</label>
         <a routerLink="/dashboard">Dashboard </a>
         <a routerLink="/heroes">Heroes</a>
+        <button (click)="logout()">Logout</button>
     </nav>
 </div>
